Finished (*didnt refactor stars, and he never fixed mobile image/name/status alignment ::shrug::)

--- a/styles/base/_global.scss
+++ b/styles/base/_global.scss
@@ -3,6 +3,10 @@ body {
   font-size: var(--fs-400);
   padding-top: 5rem;
   text-align: center;
+  background-image: url(../../images/bg-pattern-top-desktop.svg), url(../../images/bg-pattern-bottom-desktop.svg);
+  background-position: top left, bottom right;
+  background-repeat: no-repeat;
+  background-size: max(50%, 400px);
 }
 
 h1 {
@@ -10,12 +14,13 @@ h1 {
   color: var(--clr-primary-700);
   line-height: 1;
   max-width: 12ch;
-  margin-bottom: 1em;
+  margin-bottom: 0.25em;
   // font-weight: 800;
 
   @media (max-width: 50em) {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1em;
   }
 
 }
@@ -46,4 +51,3 @@ main {
     grid-column: 1 / -1;
   }
 }
-
