--- a/styles/main.css
+++ b/styles/main.css
@@ -108,6 +108,10 @@ body {
   font-size: var(--fs-400);
   padding-top: 5rem;
   text-align: center;
+  background-image: url(../../images/bg-pattern-top-desktop.svg), url(../../images/bg-pattern-bottom-desktop.svg);
+  background-position: top left, bottom right;
+  background-repeat: no-repeat;
+  background-size: max(50%, 400px);
 }
 
 h1 {
@@ -115,12 +119,13 @@ h1 {
   color: var(--clr-primary-700);
   line-height: 1;
   max-width: 12ch;
-  margin-bottom: 1em;
+  margin-bottom: 0.25em;
 }
 @media (max-width: 50em) {
   h1 {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1em;
   }
 }
 
